src/authorship/snapshots/autter__authorship__authorship_log_serialization__tests__format_line_ranges.snap
---
source: src/authorship/authorship_log_serialization.rs
expression: format_line_ranges(&ranges)
---
"1,2,19-222"
