src/authorship/snapshots/autter__authorship__authorship_log_serialization__tests__hash_always_maps_to_prompt.snap
---
source: src/authorship/authorship_log_serialization.rs
assertion_line: 947
expression: serialized
---
"src/example.rs\n  c9883b05a2487d6d 1-10\n---\n{\n  \"schema_version\": \"authorship/3.0.0\",\n  \"autter_version\": \"development\",\n  \"base_commit_sha\": \"\",\n  \"prompts\": {\n    \"c9883b05a2487d6d\": {\n      \"agent_id\": {\n        \"tool\": \"cursor\",\n        \"id\": \"session_123\",\n        \"model\": \"claude-3-sonnet\"\n      },\n      \"human_author\": null,\n      \"total_additions\": 0,\n      \"total_deletions\": 0,\n      \"accepted_lines\": 0,\n      \"overriden_lines\": 0\n    }\n  }\n}"
