src/authorship/snapshots/autter__authorship__authorship_log_serialization__tests__line_range_sorting.snap
---
source: src/authorship/authorship_log_serialization.rs
expression: formatted
---
"1,5,10-15,25-30,50,100-200"
