src/authorship/snapshots/autter__authorship__authorship_log_serialization__tests__serialize_deserialize_roundtrip.snap
---
source: src/authorship/authorship_log_serialization.rs
expression: serialized
---
"src/file.xyz\n  xyzAbc 1,2,19-222\n  123456 400-405\nsrc/file2.xyz\n  123456 1-111,245,260\n---\n{\n  \"schema_version\": \"authorship/3.0.0\",\n  \"autter_version\": \"development\",\n  \"base_commit_sha\": \"abc123\",\n  \"prompts\": {}\n}"
